[gd_scene load_steps=51 format=3 uid="uid://x737o50fwj3d"]

[ext_resource type="PackedScene" uid="uid://c4w8b3lq6a1gs" path="res://scenes/npc.tscn" id="1_dav1i"]
[ext_resource type="Script" path="res://scenes/enemies/boss_wizard.gd" id="2_6x1ws"]
[ext_resource type="Texture2D" uid="uid://cp140jf2lg47" path="res://sprites/other/Evil Wizard/Attack.png" id="3_64wxn"]
[ext_resource type="Texture2D" uid="uid://bycxyjmu5o5mt" path="res://sprites/other/Evil Wizard/Move.png" id="3_aqs0a"]
[ext_resource type="Texture2D" uid="uid://drubdbs4ky3b5" path="res://sprites/other/Evil Wizard/Death.png" id="4_4pb3j"]
[ext_resource type="Texture2D" uid="uid://bnb82l2iejkn" path="res://sprites/other/Evil Wizard/Idle.png" id="5_vraam"]
[ext_resource type="Script" path="res://scenes/enemies/boss_wizard_hurtbox.gd" id="6_s5xf0"]
[ext_resource type="Texture2D" uid="uid://bp10xskwsx0dl" path="res://sprites/other/Evil Wizard/Take Hit.png" id="6_xcwyc"]
[ext_resource type="Script" path="res://scenes/enemies/boss_wizard_hitbox.gd" id="7_tfvf4"]
[ext_resource type="Script" path="res://scenes/enemies/boss_wizard_stats.gd" id="8_m0852"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t1goc"]
atlas = ExtResource("3_64wxn")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_df86i"]
atlas = ExtResource("3_64wxn")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f612"]
atlas = ExtResource("3_64wxn")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_lclnb"]
atlas = ExtResource("3_64wxn")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rdic"]
atlas = ExtResource("3_64wxn")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jglai"]
atlas = ExtResource("3_64wxn")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdwlt"]
atlas = ExtResource("3_64wxn")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5a77"]
atlas = ExtResource("3_64wxn")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_p65cd"]
atlas = ExtResource("3_aqs0a")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5t8o"]
atlas = ExtResource("3_aqs0a")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_awl0s"]
atlas = ExtResource("3_aqs0a")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ovtl"]
atlas = ExtResource("3_aqs0a")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8x7cv"]
atlas = ExtResource("3_aqs0a")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_js1si"]
atlas = ExtResource("3_aqs0a")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cekr"]
atlas = ExtResource("3_aqs0a")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_17ycv"]
atlas = ExtResource("3_aqs0a")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7t5t"]
atlas = ExtResource("4_4pb3j")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mdgh"]
atlas = ExtResource("4_4pb3j")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_map8s"]
atlas = ExtResource("4_4pb3j")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sharw"]
atlas = ExtResource("4_4pb3j")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_br32g"]
atlas = ExtResource("4_4pb3j")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vbow"]
atlas = ExtResource("6_xcwyc")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bbdj"]
atlas = ExtResource("6_xcwyc")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gwce"]
atlas = ExtResource("6_xcwyc")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_43ogp"]
atlas = ExtResource("6_xcwyc")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3o1a"]
atlas = ExtResource("5_vraam")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wol82"]
atlas = ExtResource("5_vraam")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdfkg"]
atlas = ExtResource("5_vraam")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nkwf"]
atlas = ExtResource("5_vraam")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6oo5w"]
atlas = ExtResource("5_vraam")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq8bi"]
atlas = ExtResource("5_vraam")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_61dny"]
atlas = ExtResource("5_vraam")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_iym43"]
atlas = ExtResource("5_vraam")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_nm4jv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1goc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df86i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f612")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lclnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rdic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jglai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdwlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5a77")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p65cd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5t8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awl0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ovtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x7cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js1si")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cekr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17ycv")
}],
"loop": true,
"name": &"chase",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7t5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mdgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_map8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sharw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br32g")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vbow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bbdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gwce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43ogp")
}],
"loop": true,
"name": &"heal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3o1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wol82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdfkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nkwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oo5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq8bi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61dny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iym43")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p1iwd"]
radius = 23.7582

[sub_resource type="CircleShape2D" id="CircleShape2D_swxmw"]
radius = 616.092

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lldcb"]
size = Vector2(25, 34.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fowqr"]
size = Vector2(222, 68)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4fwed"]
bg_color = Color(0.6, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_luqh5"]
bg_color = Color(2.16588e-06, 0.59681, 0.305655, 1)

[node name="Npc" instance=ExtResource("1_dav1i")]
script = ExtResource("2_6x1ws")
speed = 200
heal_animation = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Sprite" index="0"]
sprite_frames = SubResource("SpriteFrames_nm4jv")
animation = &"heal"
frame = 1
frame_progress = 0.278293

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]
visible = false
light_mask = 2
visibility_layer = 2
position = Vector2(-5.96046e-08, 1.90735e-06)
scale = Vector2(1.6, 1.6)
shape = SubResource("CircleShape2D_p1iwd")

[node name="DetectionArea" parent="." index="2"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea" index="0"]
light_mask = 2
visibility_layer = 2
position = Vector2(-2, 5)
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_swxmw")

[node name="Hurtbox" parent="." index="3"]
visible = false
script = ExtResource("6_s5xf0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, 4.5)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_lldcb")

[node name="Hitbox" parent="." index="4"]
visible = false
script = ExtResource("7_tfvf4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(1, -4)
shape = SubResource("RectangleShape2D_fowqr")

[node name="BossStats" type="Node" parent="." index="6"]
script = ExtResource("8_m0852")

[node name="HealthBar" type="ProgressBar" parent="." index="7"]
offset_left = -84.0
offset_top = -75.0
offset_right = 84.0
offset_bottom = -70.0
theme_override_styles/background = SubResource("StyleBoxFlat_4fwed")
theme_override_styles/fill = SubResource("StyleBoxFlat_luqh5")
max_value = 5000.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="StartHealTimer" type="Timer" parent="." index="8"]
wait_time = 5.0
autostart = true

[node name="StopHealTimer" type="Timer" parent="." index="9"]
wait_time = 10.0
autostart = true

[connection signal="animation_finished" from="Sprite/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="StartHealTimer" to="." method="_on_start_heal_timer_timeout"]
[connection signal="timeout" from="StopHealTimer" to="." method="_on_stop_heal_timer_timeout"]
